using TheWarTimeGame.Items;

namespace TheWarTimeGame.Mechanics
{
    public interface IExplore
    {
        public void Explore(IWeapon weapon);
    }
}